# Handmade-SDL

./: .gitignore  CMakeLists.txt  Handmade.sln  README.md
Assets/Textures/Characters/: Adventure boy_dead.psd  Adventure boy_idle.psd  Adventure boy_run.psd  Adventure girl_run.psd
Assets/Textures/Objects/: Coin_bronze.psd  Coin_silver.psd
Assets/Textures/Test/: Menu_buttons.psd  Test_screen_1.psd  Test_screen_2.psd
Assets/Textures/UI/: Buttons.psd
Handmade/: Background.cpp  Background.h  BoxCollider.cpp  Button.cpp  Game.cpp  Game.h  GameObject.h  GameState.cpp  GameState.h  Handmade.vcxproj  Handmade.vcxproj.filters  Input.cpp  Input.h  MenuKey.h  MenuMouse.h  Music.cpp  OBBCollider.cpp  OBBCollider.h  Plane.cpp  Plane.h  PlayState.cpp  Screen.h  Sound.h  SphereCollider.h  StartState.h  Texture.h  Utility.cpp  Utility.h
Handmade/Assets/Textures/Characters/: Adventure boy_idle (draft).psd  Adventure boy_jump (draft).psd  Adventure boy_jump.psd  Adventure boy_run (draft).psd  Adventure boy_slide (draft).psd  Adventure boy_slide.psd  Adventure girl_dead.psd  Adventure girl_idle.psd  Adventure girl_jump.psd  Adventure girl_melee.psd  Adventure girl_shoot.psd  Adventure girl_slide.psd
Handmade/Assets/Textures/Objects/: Coin_gold.psd  Objects.psd
Handmade/Assets/Textures/Test/: Menu_button_spritesheet.psd
src/: BoxCollider.cpp  BoxCollider.h  Button.h  Collectible.cpp  Collectible.h  EndState.cpp  EndState.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameState.h  Input.cpp  Input.h  Main.cpp  MenuKey.cpp  MenuMouse.cpp  Music.h  OBBCollider.cpp  OBBCollider.h  Obstacle.cpp  Obstacle.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  RigidBody.cpp  RigidBody.h  Screen.cpp  Screen.h  Sound.cpp  Sound.h  SphereCollider.cpp  SphereCollider.h  StartState.cpp  Text.cpp  Text.h  Texture.cpp  Texture.h  Utility.cpp  (+1 more)
